apps/tts-translator/tts-translator-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tts-translator
  namespace: n8n-vps
  labels:
    app: tts-translator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tts-translator
  template:
    metadata:
      labels:
        app: tts-translator
    spec:
      containers:
        - name: tts-translator
          image: tmcx/tts-translator:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: tts-translator-storage
              mountPath: /usr/share/tts-translator
      volumes:
        - name: tts-translator-storage
          persistentVolumeClaim:
            claimName: tts-translator-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: tts-translator
  namespace: n8n-vps
spec:
  selector:
    app: tts-translator
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tts-translator
  namespace: n8n-vps
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tts-6.devops-master.shop
      secretName: tts-tls
  rules:
    - host: tts-6.devops-master.shop
      http:
        paths:
          - path: /tts/voices
            pathType: Prefix
            backend:
              service:
                name: tts-translator
                port:
                  number: 8080
